--- a/index.html
+++ b/index.html
@@ -1,65 +1,65 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <link rel="stylesheet" href="index.css">
-    <meta charset="UTF-8" />
+    <title>Parallax Site: Vertical Example</title>
 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="container__item landing-page-container">
-            <div class="content__wrapper">
 
-                <header class="header">
-                    <div class="menu-icon header__item">
-                        <span class="menu-icon__line"></span>
-                    </div>
+    <!-- First Section -->
+    <div class="section section-1" data-layer="true" data-speed="1" data-background="true">
 
-                    <h1 class="heading header__item">D-UI</h1>
+        <!-- All objects for this section -->
+        <div class="obj-wrapper">
+            <div class="obj obj-1" data-layer="true" data-speed="4">Obj 1</div>
+            <div class="obj obj-2" data-layer="true" data-speed="6">Obj 2</div>
+            <div class="obj obj-3" data-layer="true" data-speed="8">Obj 3</div>
+            <div class="obj obj-4" data-layer="true" data-speed="normal">Obj 4</div>
+        </div>
 
-                    <ul class="social-container header__item">
-                        <li class="social__icon social__icon--fb">
-                            <img src="https://s29.postimg.org/3ldyta4qb/image.png" alt="facebook">
-                        </li>
-                        <li class="social__icon social__icon--dr">
-                            <img src="https://s29.postimg.org/vqltn8fhv/image.png" alt="dribbble">
-                        </li>
-                        <li class="social__icon social__icon--in">
-                            <img src="https://s29.postimg.org/p1fa77u5v/image.png" alt="instagram">
-                        </li>
-                    </ul>
-                </header>
+    </div>
 
-                <p class="coords">N 49° 16' 35.173" / W 0° 42' 11.30"</p>
 
-                <div class="ellipses-container">
 
-                    <h2 class="greeting">Hello</h2>
+    <!-- Second Section -->
+    <div class="section section-2" data-layer="true" data-speed="1" data-background="true">
 
-                    <div class="ellipses ellipses__outer--thin">
-
-                        <div class="ellipses ellipses__orbit"></div>
-
-                    </div>
-
-                    <div class="ellipses ellipses__outer--thick"></div>
-                </div>
-
-                <div class="scroller">
-                    <p class="page-title">home</p>
-
-                    <div class="timeline">
-                        <span class="timeline__unit"></span>
-                        <span class="timeline__unit timeline__unit--active"></span>
-                        <span class="timeline__unit"></span>
-                    </div>
-                </div>
-            </div>
+        <!-- All objects for this section -->
+        <div class="obj-wrapper">
+            <div class="obj obj-1" data-layer="true" data-speed="4">Obj 1</div>
+            <div class="obj obj-2" data-layer="true" data-speed="6">Obj 2</div>
+            <div class="obj obj-3" data-layer="true" data-speed="8">Obj 3</div>
+            <div class="obj obj-4" data-layer="true" data-speed="normal">Obj 4</div>
 
         </div>
 
     </div>
+
+
+
+    <!-- Third Section -->
+    <div class="section section-3" data-layer="true" data-speed="1" data-background="true">
+
+        <!-- All objects for this section -->
+        <div class="obj-wrapper">
+            <div class="obj obj-1" data-layer="true" data-speed="4">Obj 1</div>
+            <div class="obj obj-2" data-layer="true" data-speed="6">Obj 2</div>
+            <div class="obj obj-3" data-layer="true" data-speed="8">Obj 3</div>
+            <div class="obj obj-4" data-layer="true" data-speed="normal">Obj 4</div>
+        </div>
+
+    </div>
+
+
+
+
+    <!-- Script includes -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+    <script src="../../parallax-site.js"></script>
+    <script src="site.js"></script>
 
 </body>
 
