--- a/pets/client/index.html
+++ b/pets/client/index.html
@@ -4,15 +4,28 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 
+
 <body>
     <div id='stars'></div>
     <div id='stars2'></div>
     <div id='stars3'></div>
     <div id='title'>
+        <form id="form" class="topBefore">
+            <input id="ulocation" type="text" placeholder="location">
+            <input id="ubreed" type="text" placeholder="breed">
+            <input id="uage" type="text" placeholder="age">
+            <input id="ugender" type="text" placeholder="gender">
+            <form class=submit_file action="/action_page.php">
+                <input type="file" class="file_submit" name="pic" accept="image/*">
+                <input type="submit">
+            </form>
+        </form>
         <span>
     Finding A Pet
   </span>
     </div>
+
+
 
     <div class="group">
         <form class="location">
